@@ -28,7 +28,7 @@ old.packages(lib.loc = NULL, repos = getOption("repos"),
 
 new.packages(lib.loc = NULL, repos = getOption("repos"),
              contriburl = contrib.url(repos),
-             method, available = NULL, ask = FALSE)
+             method, available = NULL, ask = FALSE, destdir = NULL)
 
 download.packages(pkgs, destdir, available = NULL,
                   repos = getOption("repos"),
@@ -152,7 +152,8 @@ contrib.url(repos, type = getOption("pkgType"))
   give warnings about incompletely installed bundles (provided the
   information is available) and bundles whose contents has changed.
   If \code{ask != FALSE} it asks which packages should be installed
-  in the first element of \code{lib.loc}.
+  in the first element of \code{lib.loc}.  NB: versioned installs are
+  not installs of a named package.
 
   \code{download.packages} takes a list of package/bundle names and a
   destination directory, downloads the newest versions and saves them in
